2022-12-07T16:20:51Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3640758581 # 684
* notice: last 14d: unq all: 1 2
* notice: prev accum: outdated-unq outdated-all / unq all: 111 156 / 112 157
* notice: next accum: outdated-unq outdated-all / unq all: 112 157 / 113 159
* notice: prev exec diff / last date diff / accum: unq all: +1 +2 -0 -0 / +1 +2 -0 -0 / 1 2
* notice: removed / changed dates: [2022-10-25] / [2022-12-07]

2022-10-26T08:23:35Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3327364147 # 557
* notice: last 14d: unq all: 1 1
* notice: prev accum: outdated-unq outdated-all / unq all: 109 153 / 112 157
* notice: next accum: outdated-unq outdated-all / unq all: 111 156 / 112 157
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2022-10-12] / []

2022-10-26T01:48:26Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3325586763 # 556
* notice: last 14d: unq all: 3 4
* notice: prev accum: outdated-unq outdated-all / unq all: 109 153 / 111 156
* notice: next accum: outdated-unq outdated-all / unq all: 109 153 / 112 157
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2022-10-25]

2022-10-20T01:59:05Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3286282382 # 538
* notice: last 14d: unq all: 2 3
* notice: prev accum: outdated-unq outdated-all / unq all: 108 152 / 111 156
* notice: next accum: outdated-unq outdated-all / unq all: 109 153 / 111 156
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2022-10-05] / []

2022-10-17T16:37:42Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3266939945 # 531