@@ -1,9 +1,14 @@
 {
-  "count": 2,
-  "uniques": 1,
+  "count": 4,
+  "uniques": 2,
   "clones": [
     {
       "timestamp": "2022-12-07T00:00:00Z",
+      "count": 2,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2022-12-12T00:00:00Z",
       "count": 2,
       "uniques": 1
     }
