@@ -1,3 +1,11 @@
+2022-12-13T00:56:13Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3681202082 # 699
+* notice: last 14d: unq all: 2 4
+* notice: prev accum: outdated-unq outdated-all / unq all: 112 157 / 113 159
+* notice: next accum: outdated-unq outdated-all / unq all: 112 157 / 114 161
+* notice: prev exec diff / last date diff / accum: unq all: +1 +2 -0 -0 / +1 +2 -0 -0 / 1 2
+* notice: removed / changed dates: [] / [2022-12-12]
+
 2022-12-07T16:20:51Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3640758581 # 684
 * notice: last 14d: unq all: 1 2
